--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
+appdirs==1.4.3
+attrs==19.1.0
+black==19.3b0
+bleach==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
+Click==7.0
+docutils==0.14
 idna==2.8
+pkginfo==1.5.0.1
+Pygments==2.3.1
+readme-renderer==24.0
 requests==2.21.0
+requests-toolbelt==0.9.1
+six==1.12.0
+toml==0.10.0
+tqdm==4.31.1
+twine==1.13.0
 urllib3==1.24.2
+webencodings==0.5.1
