--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+run.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
