--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ socks = ["PySocks^1.7.1"]
 black = "^21.10b0"
 twine = "^3.5.0"
 pytest = "^6.2.5"
+pytest-mock = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
