--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ black = "^21.10b0"
 twine = "^3.5.0"
 pytest = "^6.2.5"
 pytest-mock = "^3.6.1"
+requests-mock = "^1.9.3"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
