--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,5 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
+          black . --check
           pytest tests/ --cov=virustotal_python
