--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requests = {version = "^2.26.0", extras = ["socks"]}
 socks = ["PySocks^1.7.1"]
 
 [tool.poetry.dev-dependencies]
-black = "^21.10b0"
+black = "22.3.0"
 twine = "^3.5.0"
 pytest = "^6.2.5"
 pytest-mock = "^3.6.1"
